# TRUGS-STORE

./: .gitignore  AGENT.md  CHANGELOG.md  NOTICE  README.md  SPEC_844_graphstore_protocol.py  folder.trug.json
.github/workflows/: ci.yml
REFERENCE/: README.md
REFERENCE/research/: 01_go_vs_python_graph_storage.md  02_postgresql_graph_performance.md  03_python_postgresql_libraries.md  04_storage_abstraction_patterns.md  05_python_go_migration_costs.md  06_hyperledger_fabric_go_feasibility.md  README.md  RESEARCH_store_feasibility.md
scripts/: profile_property_sizes.py
scripts/results/: property_size_profile.json
trugs-store/: README.md  pyproject.toml
trugs-store/src/trugs_store/: __init__.py  graph.py  memory.py  postgres.py  protocol.py  schema.sql  types.py
trugs-store/src/trugs_store/persistence/: dual_write.py  json_file.py  postgres.py
trugs-store/tests/: conftest.py  test_base_graph.py  test_benchmarks.py  test_conformance.py  test_dual_write.py  test_integration.py  test_postgres_persistence.py
trugs-store/tests/fixtures/: sample.trug.json
