[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trugs-store"
version = "0.1.0"
description = "Graph storage backends for TRUGS specifications"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trugs_store"]
